<resources>
    <string name="app_name">京东获取CK</string>
    <string name="add_btn_text">添加</string>
    <string name="del_btn_text">删除</string>
    <string name="input_btn_text">输入</string>
    <string name="get_cookie_btn_text">获取CK</string>
    <string name="check_cookie_btn_text">检测CK</string>
    <string name="bean_check_btn_text">检测豆子</string>
    <string name="clear_cookie_btn_text">重置</string>
    <string name="confirm_btn_text">添加</string>
    <string name="account_hint">用户名/手机号</string>
    <string name="account_password_hint">密码（可选）</string>
    <string name="ql_login_name">青龙面板登录</string>
    <string name="ql_address_text">青龙地址：</string>
    <string name="ql_username_text">ClientID：</string>
    <string name="ql_password_text">ClientSecret：</string>
    <string name="ql_token_text">token：</string>
    <string name="ql_login_btn_text">登录</string>
    <string name="ql_cancel_btn_text">取消</string>
    <string name="ql_status_not_login">青龙：未登录</string>
    <string name="ql_status_checking">青龙：检测中…</string>
    <string name="ql_status_connected">青龙：已连接</string>
    <string name="ql_status_expired">青龙：token已失效</string>
</resources>
