<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/page_bg"
    tools:context=".activity.MainActivity"
    app:layoutDescription="@xml/activity_main_scene">

    <TextView
        android:id="@+id/qlStatusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/ql_status_not_login"
        android:textColor="#616161"
        android:textSize="13sp" />

    <!-- 第一行：账号选择 + 添加 / 删除 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="4dp">

        <Spinner
            android:id="@+id/phoneSpinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:layout_marginEnd="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/bg_spinner" />

        <Button
            android:id="@+id/addBtn"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_btn_add"
            android:text="@string/add_btn_text" />

        <Button
            android:id="@+id/delBtn"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_delete"
            android:text="@string/del_btn_text" />
    </LinearLayout>

    <!-- 第二行：操作按钮组 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/inputBtn"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            android:background="@drawable/bg_btn_input"
            android:text="@string/input_btn_text" />

        <Button
            android:id="@+id/getCookieBtn"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            android:background="@drawable/bg_btn_get_ck"
            android:text="@string/get_cookie_btn_text" />

        <Button
            android:id="@+id/checkCookieBtn"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            android:background="@drawable/bg_btn_check_ck"
            android:text="@string/check_cookie_btn_text" />

        <Button
            android:id="@+id/beanCheckBtn"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginEnd="6dp"
            android:background="@drawable/bg_btn_bean"
            android:text="@string/bean_check_btn_text" />

        <Button
            android:id="@+id/clearCookieBtn"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_reset"
            android:text="@string/clear_cookie_btn_text" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
